Fix: Remove problematic init container and obsolete version field

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,6 @@
 # Airbyte Configuration
+# Nota: Este arquivo é apenas para referência
+# O docker-compose.yml já possui todas as configurações necessárias
+
 AIRBYTE_VERSION=0.50.33
-
-# PostgreSQL Configuration
-POSTGRES_USER=airbyte
-POSTGRES_PASSWORD=airbyte123
-POSTGRES_DB=airbyte
-
-# Workspace Configuration
-LOCAL_ROOT=/tmp/airbyte_local
-HACK_LOCAL_ROOT_PARENT=/tmp
 
